p2/confs/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-one
spec:
  selector:
    app: app1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: app-two
spec:
  selector:
    app: app2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: app-three
spec:
  selector:
    app: app3
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
